# speedtest-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  error.rs  main.rs  output.rs  speedtest.rs
