[package]
name = "speedtest-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
colored = "2.1"
futures-util = "0.3"
indicatif = "0.17"
